time-greet-services/iteration-14-kubernetes/part-f-security/k8s/greeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-service
  namespace: demo
  labels:
    app: greeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-service
  template:
    metadata:
      labels:
        app: greeting-service
    spec:
      serviceAccountName: greeting-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: greeting-service
          image: greeting-service:1.0.0
          ports:
            - containerPort: 9001
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9001
            initialDelaySeconds: 15
            periodSeconds: 5
