time-greet-services/iteration-14-kubernetes/part-f-security/k8s/time-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-service
  namespace: demo
  labels:
    app: time-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time-service
  template:
    metadata:
      labels:
        app: time-service
    spec:
      serviceAccountName: time-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: time-service
          image: time-service:1.0.0
          ports:
            - containerPort: 9002
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9002
            initialDelaySeconds: 15
            periodSeconds: 5
