time-greet-services/iteration-14-kubernetes/part-f-security/k8s/network-policy-allow-external-to-time.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-time
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: time-service
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 9002
          protocol: TCP
